tests/rosetta/out/Fortran/call-a-function-11.error
gfortran: exit status 1
/tmp/call-a-function-11.f90:23:5:

   23 |     ref(((0)+1)) = 0
      |     1
Error: Unclassifiable statement at (1)
/tmp/call-a-function-11.f90:33:17:

   33 |     call zeroptr(box)
      |                 1
Error: Rank mismatch in argument ‘ref’ at (1) (scalar and rank-1)
